# w-project

./: README.md
client/: CMakeLists.txt  conanfile.txt  pool.py  setup.sh  wclient
client/src/: main.cpp
protos/: request.pb.cc  request.pb.h  request.proto  response.pb.cc  response.pb.h  response.proto
server/: CMakeLists.txt  conanfile.txt  setup.sh
server/src/: db.cpp  db.h  main.cpp
